--- a/index.html
+++ b/index.html
@@ -543,11 +543,11 @@
                 </div>
                 
                 <div class="message">
-                    <p>On this special day of yours,</p>
-                    <p>May your life sparkle with moments of joy,</p>
-                    <p>Love, success, and unforgettable memories!</p>
+                    <p>You are the best person I ever met, and <b>you taught me so much about the world beyond my own</b></p>
+                    <p>May your life sparkle with moments of joy</p>
+                    <p><b>Thanks for your Love and unforgettable memories!</b></p>
                 </div>
-                <button class="glow-button" id="wishButton">LOVE YOU 💖</button>
+                <button class="glow-button" id="wishButton">MISS YOU 💖</button>
                 <div id="falling-hearts"></div>
             </div>
         </div>
@@ -556,7 +556,7 @@
     <!-- Birthday message popup -->
     <div id="birthdayMessage">
         <h2 style="color: #ff1493; margin-bottom: 15px;">Happy Birthday Yoshitha! 🎂</h2>
-        <p style="font-size: 16px; margin-bottom: 15px;">Wishing you an amazing birthday filled with love, laughter, and everything wonderful!</p>
+        <p style="font-size: 16px; margin-bottom: 15px;">Wishing you an amazing birthday filled with love, laughter, and everything wonderful! and <b>once again Thanks for your Love and unforgettable memories!</b></p>
         <button onclick="this.parentElement.style.display='none';" style="background: #ff69b4; color: white; border: none; padding: 8px 15px; border-radius: 20px; cursor: pointer;">Close</button>
     </div>
     
